# itp298_capstone

./: .gitignore  CMakeLists.txt  README.md  includes.hxx  main.cpp  main.hxx  random.h  terminal.hxx  test_util.hxx  vectors.hxx
.github/workflows/: cmake.yml
classes/: inventory.hxx  shop_keeper.hxx  shopkeeper.hxx
classes/battle/: battle_system.hxx  loottable.cpp  loottable.hxx
classes/containers/: inventory.hxx  loot_table.hxx  shop_inventory.hxx
classes/fighters/: actor.cpp  actor.hxx  mob.cpp  mob.hxx  player.cpp  player.hxx
classes/items/: armor.cpp  armor.hxx  item_base.cpp  item_base.hxx  itembase.cpp  itembase.hxx  potion.hxx  weapon.cpp  weapon.hxx
classes/maps/: map.cpp  map.hxx  room.cpp  room.hxx
data/: items.hxx  maps.hxx  menus.hxx  mobs.hxx  shops.hxx
demos/: battle_demo.cpp  inventory_demo.cpp  load_save_demo.cpp  tutorial_demo.cpp
menus/: battle.hxx  inputs.hxx  inventory_menu.hxx  map_movement.hxx  menu.hxx  shop.hxx  tutorial_menu.hxx
test_data/: bad_name.csv
tests/: actor_test.cpp  battle_demo.cpp  battle_test.cpp  inventory_demo.cpp  inventory_test.cpp  item_test.cpp  load_save_test.cpp  map_test.cpp  shop_demo.cpp  shop_test.cpp  tutorial_menu.cpp
